--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
-    "autoprefixer": "10.4.13",
+    "autoprefixer": "^10.4.13",
     "babel-jest": "^29.7.0",
-    "eslint": "^9.8.0",
-    "eslint-config-next": "14.2.16",
+    "eslint": "^9.15.0",
+    "eslint-config-next": "^15.0.3",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.1",
@@ -38,9 +38,9 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "nx": "20.1.3",
-    "postcss": "8.4.38",
+    "postcss": "^8.4.38",
     "prettier": "^2.6.2",
-    "tailwindcss": "3.4.3",
+    "tailwindcss": "^3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
